--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -33,6 +33,15 @@
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 	
+	<!-- 브라우저에서 PUT,PATCH,DELETE 방식을 지원하기 위한 필터 -->
+	<filter>
+		<filter-name>hiddenHttpMethodFilter</filter-name>
+		<filter-class>org.springframework.web.filter.HiddenHttpMethodFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>hiddenHttpMethodFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 
 	<!-- 한글 인코딩 -->
 	 <filter>
